<resources>
    <string name="app_name">SmartShop</string>

    <string name="otp_verify">A OTP has been send to your mobile no. Please enter the OTP below to Verify your Mobile Number</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="referrer_hint">Deep link not provided</string>
    <string name="select_country">Select a county</string>
    <string name="send_failed">Sending invitations failed</string>
    <string name="sent_invitations_fmt">Sent %d invitations</string>
    <string name="verify_phn">We will send an SMS message to verify your phone number.Enter your country code and phone number.</string>
    <string name="welcome">Invites</string>
    <string name="veryfy_phn_no_text">Verify Your Phone Number</string>
    <string name="enter_phn">Enter Phone Number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="location_text">Your Current Location</string>
    <string name="verify_location">Get your current location</string>
    <!--<string name="google_map_api">AIzaSyBInq_XolkaulKrtigv7ApdWdkmq6IH9hA</string>-->



    <string name="title_activity_registration">Registration</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="register">Register</string>
    <string name="about_activity_title">About Us</string>
    <string name="about_activity_description"><b>Boost Your Brand and Company Image with Premium Online Printing Services from Us ! </b></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="domain">Domain</string>
    <string name="website">BeingDev.com</string>
    <string name="licence">License</string>
    <string name="licencedesc">Lorem Ipsum</string>
    <string name="changelog">Changelog</string>
    <string name="changes">Lorem Ipsum</string>
    <string name="login">Login</string>
    <string name="wishlist">Wishlist</string>
    <string name="forgot">Forgot Password</string>
    <string name="register_now">Register Now</string>
    <string name="already_mem">Already a member ? </string>
    <string name="login_now">Login Now</string>
    <string name="back">Back</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Welcome Slider-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Exclusive Products</string>
    <string name="slide_1_desc">Get products which are unique and only available at our shops !</string>

    <string name="slide_2_title">Cheap Rates</string>
    <string name="slide_2_desc">Products at such an affordable rates !</string>

    <string name="slide_3_title">Hassle Free Payments</string>
    <string name="slide_3_desc">With various pay options , you can easily pay in a minute !</string>

    <string name="slide_4_title">Fast Delivery</string>
    <string name="slide_4_desc">Blazing fast order delivery within time !</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>


   <!--Registation Layout-->
    <string name="hint_name">Enter Name</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_pwd">Enter Password</string>
    <string name="hint_repwd">Re-enter Password</string>
    <string name="hint_mob">Mobile Number</string>



    <!--Menu item texts -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_notifications">Notifications</string>

    <string name="item_0">Home</string>
    <string name="item_1">Offers</string>
    <string name="item_2">Electronics</string>
    <string name="item_3">Lifestyle</string>
    <string name="item_4">Home Appliances</string>
    <string name="item_5">Books \u0026 More</string>
    <string name="item_6">More</string>

    <string name="my_profile">My Profile</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>

    <string name="help_support">Help \u0026 Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="help_center">Help Center</string>

    <string name="search_hint">Search for Products, Brands and More</string>
    <string name="update_details">Update Details</string>

    <string name="connect_internet">Connected to Internet</string>
    <string name="sorry_nointernet">Sorry! Not connected to internet</string>
    <string name="base_url">BASE URL OF API</string>
    <string name="more">More</string>

    <!--Contact Us-->
    <string name="call_us_at">Call us at :</string>
    <string name="contact_num">+91 9845184444</string>
    <string name="email_us_at">Email us at :</string>
    <string name="contact_email">info@gmediasolutions.in</string>

</resources>
