<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/mainscreengradent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideInset">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:theme="@style/AppTheme"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="10dp"
            android:textColor="#fff"
            android:textSize="45sp"
            android:id="@+id/appname_tvreg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:text="@string/app_name"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"/>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="30"
                android:inputType="text"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:hint="@string/hint_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:maxLength="30"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:maxLength="30"
                android:inputType="text"
                android:hint="@string/hint_pwd"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_confirmpassword"
            android:layout_width="match_parent"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:maxLength="30"
                android:inputType="text"
                android:hint="@string/hint_repwd"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_number"
            android:layout_width="match_parent"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:maxLength="30"
                android:inputType="number"
                android:hint="@string/hint_mob"/>
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/register"
                android:textColor="@color/white"
                android:text="@string/register"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:textSize="15sp" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot"
                style="@style/fonts"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|"
                style="@style/fonts"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/login_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/fonts"
                android:text="@string/login_now"/>

        </LinearLayout>


    </LinearLayout>

    </ScrollView>

</RelativeLayout>
