<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".homePage.ContactUsActivity"
        android:focusableInTouchMode="true">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="12dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:paddingLeft="15dp"
                    android:paddingEnd="15dp"
                    android:paddingRight="15dp"
                    android:paddingStart="15dp"
                    android:text="@string/contact_us"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    style="@android:style/TextAppearance.Large"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginBottom="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:layout_marginTop="15dp"
                            android:paddingLeft="15dp"
                            android:paddingEnd="15dp"
                            android:paddingRight="15dp"
                            android:paddingStart="15dp"
                            style="@android:style/TextAppearance.Small"
                            android:text="@string/call_us_at"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/tv3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_marginEnd="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:layout_marginTop="15dp"
                            android:paddingLeft="15dp"
                            android:paddingEnd="15dp"
                            android:paddingRight="15dp"
                            android:paddingStart="15dp"
                            style="@android:style/TextAppearance.Small"
                            android:text="@string/contact_num"
                            android:textColor="@color/black"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv2" />

                        <TextView
                            android:id="@+id/tv4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:layout_marginTop="15dp"
                            android:paddingLeft="15dp"
                            android:paddingEnd="15dp"
                            android:paddingRight="15dp"
                            android:paddingStart="15dp"
                            style="@android:style/TextAppearance.Small"
                            android:text="@string/email_us_at"
                            android:textColor="@color/black"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv3" />

                        <TextView
                            android:id="@+id/tv5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:layout_marginTop="15dp"
                            android:paddingLeft="15dp"
                            android:paddingEnd="15dp"
                            android:paddingRight="15dp"
                            android:paddingStart="15dp"
                            style="@android:style/TextAppearance.Small"
                            android:text="@string/contact_email"
                            android:textColor="@color/black"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv4" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>