<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbarwrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/white"
        app:logo="@null"
        android:gravity="left"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="Update Profile"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/view_notify"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_notifications_white_24dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                android:onClick="viewNotification"/>

            <ImageView
                android:id="@+id/cart"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_shopping_cart_white_24dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="25dp"
                android:onClick="viewCart"/>

        </LinearLayout>

    </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_below="@id/toolbarwrap"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilepic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:civ_border_color="@color/colorPrimaryDark"
                app:civ_border_width="1dp"
                android:src="@drawable/user"/>


            <ImageView
                android:id="@+id/changeprofilepic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:elevation="4dp"
                android:layout_alignBottom="@+id/profilepic"
                android:layout_alignRight="@+id/profilepic"
                android:src="@drawable/ic_menu_camera"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/name_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:elevation="10dp"
            android:textSize="20dp"
            android:text="Lorem Ipsum" />


        <LinearLayout
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:textColorHint="@color/black"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="30"
                    android:inputType="text"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:hint="@string/hint_name"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:textColorHint="@color/black"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="30"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:hint="@string/hint_email"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_number"
                android:layout_width="match_parent"
                android:textColorHint="@color/black"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <EditText
                    android:id="@+id/number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="30"
                    android:inputType="number"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:hint="@string/enter_phn"/>
            </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:id="@+id/update"
                            android:text="@string/update_details"
                            android:textColor="@color/white"
                            style="@style/AppTheme.RoundedCornerDarkMaterialButton"
                            android:textSize="15sp" />

                    </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</RelativeLayout>
